# rag-practice

./: .gitignore  README.md
basic_rag/: main.py  pyproject.toml
