[project]
name = "working1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "faiss-cpu>=1.14.3",
  "groq>=0.31.0",
  "langchain>=0.3.27",
  "langchain-community>=0.4.2",
  "langchain-core>=0.3.72",
  "langchain-groq>=0.3.7",
  "langchain-huggingface>=1.2.2",
  "langgraph>=0.6.3",
  "pip>=25.2",
  "pydantic>=2.11.7",
  "python-dotenv>=1.1.1",
  "questionary>=2.1.1",
  "rich>=15.0.0",
  "sentence-transformers>=5.6.0",
  "yaspin>=3.4.0",
]
